--- a/AuditSummary.properties
+++ b/AuditSummary.properties
@@ -1,2 +1,2 @@
-spring.kafka.producer.bootstrap-servers=localhost:9092
+#spring.kafka.producer.bootstrap-servers=localhost:9092
 kafka.topic="com.apll.cargowise.summary"
