--- a/AuditDetail.properties
+++ b/AuditDetail.properties
@@ -1,4 +1,4 @@
 spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.producer.bootstrap-servers=localhost:9092
+#spring.kafka.producer.bootstrap-servers=localhost:9092
 kafka.topic="com.apll.cargowise.summary"
 spring.kafka.consumer.group-id="groupId"
